@@ -12,6 +12,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Changed
 - [API_PARSER] [ARMIS_CENTRIX] Limit fetch quantity while testing collector
 - [API_PARSER] [TRENDMICRO_VISIONONE] Drop too long fields
+### Fixed
+- [SCRIPTS] [PKG_UPGRADE] Inacurate scripts ordering
 
 
 ## [2.34.2] - 2025-11-24
